--- a/ProjetoSiteFord-main/css/sobre.css
+++ b/ProjetoSiteFord-main/css/sobre.css
@@ -1,44 +1,51 @@
 /* Definições Gerais do main */
 main {
-    flex-direction: column;
     display: flex;
+    flex-direction: column;
+    position: relative;
     justify-content: center;
     align-items: center;
-    font-family: 'Ford', 'Arial';
+    width: 100%;
+    font-family: 'Ford', 'Arial', 'sans-serif';
 }
 
 /* Definições das imagens do main */
-.carrossel {
-    height: auto;
-    width: 100%;
-    max-width: 800px;
-    justify-content: center;
-}
-
-.carrossel img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.carrossel p {
-    text-align: center;
+.background_carrossel {
+  position:static;
+  top: 0; left: 0;
+  width: 100%;
+  height: 460px;
+  transition: background-image 0.5s ease-in-out;
 }
 
 /* Definições do texto que descreve a imagem */
 .titulo_carrossel {
     text-align: center;
+}
+
+.titulo_carrossel p {
+    padding: 0;
     font-size: 20px;
     font-weight: bold;
-    margin-top: 12px;
+    margin: 0;
 }
 
 /* Definições Botões para controlar os slides */
 .botao_carrossel {
     position: absolute;
-    left: 45%;
-    transform: translateY(-120%);
+    top: 420px;
     display: flex;
-    gap: 10px;
-    padding: 6px 12px;
+    justify-content: center;
+    gap: 30px;
+}
+
+.botao_carrossel input[type="radio"] {
+    width: 25px;
+    height: 25px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.botao_carrossel input[type="radio"]:checked {
+    background-color: #0066ff;
 }
