--- a/ProjetoSiteFord-main/css/sobre.css
+++ b/ProjetoSiteFord-main/css/sobre.css
@@ -14,7 +14,7 @@ main {
   position:static;
   top: 0; left: 0;
   width: 100%;
-  height: 460px;
+  height: 545px;
   transition: background-image 0.5s ease-in-out;
 }
 
@@ -35,7 +35,7 @@ main {
 /* Definições Botões para controlar os slides */
 .botao_carrossel {
     position: absolute;
-    top: 430px;
+    top: 520px;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -68,4 +68,18 @@ main {
 
 .controle_carrossel button.ativo {
     transform: scale(1.05); 
+}
+
+/* Texto para indicar veiculos */
+
+/* Edição botão para lançar em veiculos */
+.botao_redireciona_veiculos button {
+    display: flex;
+    justify-content: center;
+    font-size: 16px;
+    background-color: #1351d8;
+    padding: 10px 20px;
+    border-radius: 15px;
+    width: 100%;
+    cursor: pointer;    
 }
