--- a/ProjetoSiteFord-main/css/sobre.css
+++ b/ProjetoSiteFord-main/css/sobre.css
@@ -9,19 +9,20 @@ main {
     font-family: 'Ford', 'Arial', 'sans-serif';
 }
 
+
 /* Definições das imagens do main */
 .background_carrossel {
-  position:static;
-  top: 0; left: 0;
-  width: 100%;
-  height: 545px;
-  transition: 1s ease-in-out;
+    position: static;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 545px;
+    transition: 1s ease-in-out;
 }
 
 /* Definições do texto que descreve a imagem */
 .titulo_carrossel {
     text-align: center;
-    position: absolute;
     display: flex;
 }
 
@@ -66,13 +67,17 @@ main {
 }
 
 .controle_carrossel button.ativo {
-    transform: scale(1.05); 
+    transform: scale(1.05);
 }
 
+
 /* Texto para indicar veiculos */
-.textos_sobre_nos h1 {
+.textos_redireciona_veiculos h1 {
     color: #00095b;
+    margin-top: 3%;
+    margin-bottom: 3%;
 }
+
 /* Edição botão para lançar em veiculos */
 .botao_redireciona_veiculos {
     display: flex;
@@ -80,7 +85,6 @@ main {
     align-items: center;
     margin-bottom: 1%;
 }
-
 
 .botao_redireciona_veiculos button {
     font-size: 20px;
@@ -99,4 +103,32 @@ main {
     transform: scale(1.1);
     background-color: #1351d8;
     transition: all 0.5s ease;
+}
+
+
+/* Texto para notcias Ford */
+.texto-noticias-ford h1 {
+    text-align: center;
+    color: #00095b;
+    margin-top: 3%;
+    margin-bottom: 3%;
+}
+
+.texto-noticias-ford p {
+    text-align: center;
+    color: #00095b;
+    font-size: 18px;
+    margin-top: 3%;
+    margin-bottom: 3%;
+}
+
+/* Imamgem que define as imagems das noticias */
+.imagem-noticias-ford {
+    display: flex;
+    gap: 5%;
+}
+
+.imagem-noticias-ford img {
+    height: 360px;
+    width: auto;
 }
