Alterações bsicas de texto

--- a/ProjetoSiteFord-main/css/sytle.css
+++ b/ProjetoSiteFord-main/css/sytle.css
@@ -24,7 +24,7 @@ header {
     cursor: pointer;
     font-weight: bold;
     font-size: 20px;
-    color: #333;
+    color: #00095b;
 }
 
 /* Header Geral: Edição da Logo ford centralizada no centro */
@@ -53,7 +53,7 @@ header {
     cursor: pointer;
     font-weight: bold;
     font-size: 20px;
-    color: #333;
+    color: #00095b;
 }
 
 /* Footer Geral */
