--- a/css/sobre.css
+++ b/css/sobre.css
@@ -11,7 +11,7 @@ main {
 
 
 /* Definições das imagens do main */
-.background_carrossel {
+.background-carrossel {
     position: static;
     top: 0;
     left: 0;
@@ -21,12 +21,12 @@ main {
 }
 
 /* Definições do texto que descreve a imagem */
-.titulo_carrossel {
+.titulo-carrossel {
     text-align: center;
     display: flex;
 }
 
-.titulo_carrossel p {
+.titulo-carrossel p {
     padding: 0;
     font-size: 20px;
     font-weight: bold;
@@ -34,7 +34,7 @@ main {
 }
 
 /* Definições Botões para controlar os slides */
-.botao_carrossel {
+.botao-carrossel {
     position: absolute;
     top: 520px;
     width: 100%;
@@ -43,7 +43,7 @@ main {
     gap: 5%;
 }
 
-.controle_carrossel::before {
+.controle-carrossel::before {
     content: '';
     display: block;
     width: 150px;
@@ -54,7 +54,7 @@ main {
     transition: all 0.3s ease;
 }
 
-.botao_carrossel .controle_carrossel {
+.botao-carrossel .controle-carrossel {
     width: 120px;
     height: 12px;
     cursor: pointer;
@@ -66,27 +66,27 @@ main {
     outline: none;
 }
 
-.controle_carrossel button.ativo {
+.controle-carrossel button.ativo {
     transform: scale(1.05);
 }
 
 
 /* Texto para indicar veiculos */
-.textos_redireciona_veiculos h1 {
+.textos-redireciona-veiculos h1 {
     color: #00095b;
     margin-top: 3%;
     margin-bottom: 3%;
 }
 
 /* Edição botão para lançar em veiculos */
-.botao_redireciona_veiculos {
+.botao-redireciona-veiculos {
     display: flex;
     justify-content: center;
     align-items: center;
     margin-bottom: 1%;
 }
 
-.botao_redireciona_veiculos button {
+.botao-redireciona-veiculos button {
     font-size: 20px;
     color: white;
     font-weight: bold;
@@ -94,12 +94,11 @@ main {
     background-color: #00095b;
     padding: 10px 20px;
     border-radius: 15px;
-    width: 50%;
     font-family: 'Ford', 'Arial', 'sans-serif';
     cursor: pointer;
 }
 
-.botao_redireciona_veiculos button:hover {
+.botao-redireciona-veiculos button:hover {
     transform: scale(1.1);
     background-color: #1351d8;
     transition: all 0.5s ease;
