--- a/css/sobre.css
+++ b/css/sobre.css
@@ -78,6 +78,47 @@ main {
     margin-bottom: 3%;
 }
 
+/* Imagem carros de Exemplo para veiculos */
+.lista-veiculos-slider {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+.lista-veiculos-slider img {
+    height: 240px;
+    width: auto;
+}
+
+/* Botões para passar as imagens */
+.botao-slider {
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    right: 0;
+    transform: translateY(-50%);
+    padding: 0 20px;
+    z-index: 10;
+}
+
+/* Estilização para ambos os botões */
+.botao-slider button {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    font-size: 24px;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.3s ease;
+}
+
+
 /* Edição botão para lançar em veiculos */
 .botao-redireciona-veiculos {
     display: flex;
