--- a/css/sobre.css
+++ b/css/sobre.css
@@ -89,33 +89,27 @@ main {
     width: auto;
 }
 
-/* Botões para passar as imagens */
+/* Botões Slider para passar as imagens */
 .botao-slider {
+    width: 50%;
     display: flex;
     justify-content: space-between;
     position: absolute;
     top: 50%;
-    left: 0;
-    right: 0;
-    transform: translateY(-50%);
-    padding: 0 20px;
-    z-index: 10;
+    transform: translateY(30%);
 }
 
-/* Estilização para ambos os botões */
 .botao-slider button {
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    background-color: rgba(0, 0, 0, 0.5);
-    color: white;
-    font-size: 24px;
-    border: none;
+    border: 5px solid #797979;
+    color: #797979;
+    font-size: 20px;
     cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: all 0.3s ease;
 }
 
 
@@ -150,8 +144,8 @@ main {
 .texto-noticias-ford h1 {
     text-align: center;
     color: #00095b;
-    margin-top: 3%;
-    margin-bottom: 3%;
+    margin-top: 5%;
+    margin-bottom: 5%;
 }
 
 .texto-noticias-ford p {
@@ -159,7 +153,7 @@ main {
     color: #00095b;
     font-size: 18px;
     margin-top: 3%;
-    margin-bottom: 3%;
+    margin-bottom: 5%;
 }
 
 /* Imamgem que define as imagems das noticias */
