--- a/css/sobre.css
+++ b/css/sobre.css
@@ -9,7 +9,6 @@ main {
     font-family: 'Ford', 'Arial', 'sans-serif';
 }
 
-
 /* Definições das imagens do main */
 .background-carrossel {
     position: static;
@@ -17,7 +16,6 @@ main {
     left: 0;
     width: 100%;
     height: 545px;
-    transition: 1s ease-in-out;
 }
 
 /* Definições do texto que descreve a imagem */
@@ -43,17 +41,6 @@ main {
     gap: 5%;
 }
 
-.controle-carrossel::before {
-    content: '';
-    display: block;
-    width: 150px;
-    height: 60px;
-    position: relative;
-    top: -10px;
-    margin: -15%;
-    transition: all 0.3s ease;
-}
-
 .botao-carrossel .controle-carrossel {
     width: 120px;
     height: 12px;
@@ -66,24 +53,35 @@ main {
     outline: none;
 }
 
+.controle-carrossel::before {
+    content: '';
+    display: block;
+    width: 150px;
+    height: 60px;
+    position: relative;
+    top: -10px;
+    margin: -15%;
+    transition: all 0.3s ease;
+}
+
 .controle-carrossel button.ativo {
     transform: scale(1.05);
 }
 
-
-/* Texto para indicar veiculos */
+/* Texto para indicar veículos */
 .textos-redireciona-veiculos h1 {
     color: #00095b;
-    margin-top: 3%;
-    margin-bottom: 3%;
+    margin-top: 7%;
+    margin-bottom: 2%;
 }
 
-/* Imagem carros de Exemplo para veiculos */
+/* Imagem carros de exemplo para veículos */
 .lista-veiculos-slider {
     display: flex;
     justify-content: center;
     text-align: center;
 }
+
 .lista-veiculos-slider img {
     height: 240px;
     width: auto;
@@ -91,12 +89,17 @@ main {
 
 /* Botões Slider para passar as imagens */
 .botao-slider {
-    width: 50%;
+    width: 40%;
     display: flex;
     justify-content: space-between;
     position: absolute;
     top: 50%;
     transform: translateY(30%);
+}
+
+.botao-slider img {
+    width: 20px;
+    height: auto;
 }
 
 .botao-slider button {
@@ -112,8 +115,7 @@ main {
     justify-content: center;
 }
 
-
-/* Edição botão para lançar em veiculos */
+/* Edição botão para lançar em veículos */
 .botao-redireciona-veiculos {
     display: flex;
     justify-content: center;
@@ -139,12 +141,11 @@ main {
     transition: all 0.5s ease;
 }
 
-
-/* Texto para notcias Ford */
+/* Texto para notícias Ford */
 .texto-noticias-ford h1 {
     text-align: center;
     color: #00095b;
-    margin-top: 5%;
+    margin-top: 10%;
     margin-bottom: 5%;
 }
 
@@ -156,13 +157,52 @@ main {
     margin-bottom: 5%;
 }
 
-/* Imamgem que define as imagems das noticias */
+/* Imagem que define as imagens das notícias */
 .imagem-noticias-ford {
     display: flex;
     gap: 5%;
+    justify-content: center;
+    align-items: flex-start;
 }
 
-.imagem-noticias-ford img {
+.imagem-noticias {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: auto;
+}
+
+.imagem-noticias img {
     height: 360px;
     width: auto;
+}
+
+/* Botões que levam para as notícias */
+.botao-noticias {
+    margin-top: 3%;
+    margin-bottom: 3%;
+    display: flex;
+    justify-content: center;
+}
+
+.botao-noticias button {
+    width: 120px;
+    height: 40px;
+    padding: 10px 15px;
+    color: white;
+    background-color: #00095b;
+    border: 1px solid #797979;
+    border-radius: 15px;
+    font-size: 14px;
+    font-family: 'Ford', 'Arial', 'sans-serif';
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.botao-noticias:hover button {
+    transform: scale(1.1);
+    background-color: #1351d8;
+    transition: all 0.5s ease;
 }
